test/Fail/Issue2902.err
Issue2902.agda:13.9-13: error: [UnequalTerms]
The terms
  i
and
  fsuc fzero
are not equal at type Fin 2
when checking that the expression refl has type i ≡ fsuc fzero
